fix Kate snippets: crash when editing a snippet repository

BUG: 478230


(cherry picked from commit e2db4cef84f5e8e7e0c00fe069966cdf48f363e0)